--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                                     <h2>Logo & Identity</h2>
                                     <ul class="mega-links">
                                         <li><a href="ServicePage\LogoDesigner.html">Logo Design</a></li>
-                                        <li><a href="#">Business Card Design</a></li>
-                                        <li><a href="#">Letterhead Design</a></li>
-                                        <li><a href="#">Name Card Design</a></li>
-                                        <li><a href="#">Stationery Design</a></li>
+                                        <li><a href="ServicePage\LogoDesigner.html">Business Card Design</a></li>
+                                        <li><a href="ServicePage\LogoDesigner.html">Letterhead Design</a></li>
+                                        <li><a href="ServicePage\LogoDesigner.html">Name Card Design</a></li>
+                                        <li><a href="ServicePage\LogoDesigner.html">Stationery Design</a></li>
                                     </ul>
                                 </section>
                             </div>
@@ -70,11 +70,11 @@
                                 <section>
                                     <h2 >Graphic Design</h2>
                                     <ul class="mega-links" >
-                                        <li><a href="#">Graphic Design</a></li>
-                                        <li><a href="#">Infographic Design</a></li>
-                                        <li><a href="#">3D Design</a></li>
-                                        <li><a href="#">Photoshop Design</a></li>
-                                        <li><a href="#">Ad Design</a></li>
+                                        <li><a href="ServicePage\LogoDesigner.html">Graphic Design</a></li>
+                                        <li><a href="ServicePage\LogoDesigner.html">Infographic Design</a></li>
+                                        <li><a href="ServicePage\LogoDesigner.html">3D Design</a></li>
+                                        <li><a href="ServicePage\LogoDesigner.html">Photoshop Design</a></li>
+                                        <li><a href="ServicePage\LogoDesigner.html">Ad Design</a></li>
                                     </ul>
                                 </section>
                             </div>
@@ -94,9 +94,9 @@
                                 <section>
                                     <h2>Character Design</h2>
                                     <ul class="mega-links">
-                                        <li><a href="#">T-shirt Design</a></li>
-                                        <li><a href="#">Label Design</a></li>
-                                        <li><a href="#">Packaging Design</a></li>
+                                        <li><a href="ServicePage\LogoDesigner.html">T-shirt Design</a></li>
+                                        <li><a href="ServicePage\LogoDesigner.html">Label Design</a></li>
+                                        <li><a href="ServicePage\LogoDesigner.html">Packaging Design</a></li>
                                     </ul>
                                 </section>
                             </div>
